<resources>
    <string name="app_name">Users list</string>

    <string name="name">Имя: %s</string>
    <string name="email">Почта:&#160;</string>
    <string name="active">Активен</string>
    <string name="not_active">Не активен</string>
    <string name="age">%d лет</string>
    <string name="phone">Номер:&#160;</string>
    <string name="company">Компания: %s</string>
    <string name="contacts">Контакты пользователя:</string>
    <string name="address">Адрес: %s</string>
    <string name="about_user">О себе: %s</string>
    <string name="eye_color">Цвет глаз:</string>
    <string name="favourite_fruit">Любимый фрукт:</string>
    <string name="date_of_registration">Дата регистрации %s</string>
    <string name="geolocation">Геолокация:&#160;</string>
    <string name="friendModels">Друзья:</string>
    <string name="network_data_load_fail">Не удалось загрузить данные по сети.</string>
    <string name="retry">Обновить</string>

    <string name="app_error_title_generic">Sorry, something went wrong.</string>
    <string name="app_error_body_generic">Please try again.</string>
</resources>
