<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView_item_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/email" />

    <RelativeLayout
        android:id="@+id/isActiveLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/isActiveImage"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/text_start_margin"
            android:background="@drawable/shape_oval" />

        <TextView
            android:id="@+id/isActiveText"
            style="@style/ProfileField"
            android:text="@string/active"
            android:layout_toEndOf="@id/isActiveImage"/>
    </RelativeLayout>

    <View
        android:id="@+id/view_1"
        style="@style/LineSeparator"/>
</LinearLayout>